fixed layout issues for mobile

--- a/sass/Partials/_layout.scss
+++ b/sass/Partials/_layout.scss
@@ -86,8 +86,9 @@ img {
 			padding-top: 270px;
 			h2 {
 				text-align: center;
-				padding-top: 30%;
+				padding-top: 1%;
 				margin-top: 0;
+				margin-bottom: 10%;
 
 			}
 
