--- a/sass/Partials/_media.scss
+++ b/sass/Partials/_media.scss
@@ -139,7 +139,7 @@
 	.header {
 		h1 {
 			text-align: center;
-			margin: 28px;
+			//margin: 28px;
 			
 		}
 
@@ -158,13 +158,16 @@
 
 		.header {
 			h1 {
+				text-align: center;
 				margin-top: -13px;
-				margin-left: 95px;
+				margin-left: 16%;
+
+				
 			}
 		.social_media {
 			text-align: center;
 			margin: 0;
-			margin-right: 145px;
+			margin-right: 30%;
 			
 		}
 			nav{
@@ -172,8 +175,8 @@
 				ul {
 
 					li {
-						padding-right: 6px;
-						font-size: 1.6em;
+						padding-right: 4px;
+						font-size: 1.15em;
 					}
 				}
 			}
@@ -547,6 +550,7 @@
 	.video_container{
 		.mancard_video {
 			text-align: center;
+
 		}
 	}
 
