--- a/sass/neat/_neat.scss
+++ b/sass/neat/_neat.scss
@@ -114,7 +114,7 @@ section {
 @media #{$video_fix2} {
 	.video_container{
 		iframe {
-			width: 400px;
+			width: 300px;
 		}
 	}
 }
